# hypr-ringlight

./: .gitignore  Cargo.toml  README.md
scripts/: omarchy-restart-hypr-ringlight
src/: camera.rs  config.rs  ipc.rs  main.rs  theme.rs  tui.rs
